# the-silent-briefing

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.supabase.env  docker-compose.yml
backend/: pyproject.toml
backend/briefing/: config.py
backend/briefing/api/: deps.py  deps_auth.py  lifespan.py  main.py
backend/briefing/api/routes/: console.py  extraction.py  feeds.py  intelligence.py  (+1 more)
backend/briefing/defaults/: __init__.py  source_urls.py
backend/briefing/services/: admin_worker_trigger.py  schedule_catalog.py
backend/briefing/worker/: __main__.py
backend/tests/: test_admin_worker_trigger.py  test_adversarial_pipeline.py  test_alert_dispatcher.py  test_api_admin_correlations.py  test_api_admin_dossiers.py  test_api_admin_media.py  test_api_admin_officials.py  test_api_admin_opinions_bills.py  test_api_admin_ops.py  test_api_admin_runs.py  test_api_admin_sources_feeds.py  test_api_admin_users.py  test_api_console.py  test_api_feeds.py  test_api_search.py  test_api_step0.py  test_audit_log_service.py  test_auth_deps.py  test_baseline_civic.py  test_baseline_civic_elections.py  test_baseline_vote_utah.py  test_correlation.py  test_deps_auth_effective_role.py  test_dossier_writer.py  test_evidence_bundle.py  test_feed_service.py  test_fetcher_resilient.py  test_opinion_correlation_hook.py  test_perplexity_llm.py  test_recent_rag_correlation.py  test_retrieval_stages.py  test_rls_gui_tables.py  test_rls_operator.py  test_routing.py  test_settings_resolver.py  test_worker_schedule.py
backend/tests/fixtures/: evidence_bundle_golden.json
(+407 files in other folders)
