[project]
name = "backend"
version = "0.1.0"
description = "Silent Briefing API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["briefing"]
